--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ pytest = "^8.3.2"
 ruff = "^0.6.3"
 sphinx = "^8.0.2"
 myst-parser = "^4.0.0"
+ipython = "^8.27.0"
 
 [build-system]
 requires = ["poetry-core"]
