Style ruff to accept longer line-length

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,3 +29,6 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
 super-auto-comb = "super_auto_comb.cli:cli"
+
+[tool.ruff]
+line-length = 120
