--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ tqdm = "^4.66.5"
 matplotlib = "^3.9.2"
 tintervals = "^0.1.7"
 pandas = "^2.2.2"
+configargparse = "^1.7"
 
 
 [tool.poetry.group.dev.dependencies]
