--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,9 +20,14 @@ configargparse = "^1.7"
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.2"
 ruff = "^0.6.3"
-sphinx = "^8.0.2"
-myst-parser = "^4.0.0"
-ipython = "^8.27.0"
+
+
+[tool.poetry.group.doc.dependencies]
+sphinx = "^7.4.7"
+myst-parser = "^3.0.1"
+sphinx-rtd-theme = "^2.0.0"
+sphinx-autobuild = "^2024.9.3"
+sphinx-autoapi = "^3.3.1"
 
 [build-system]
 requires = ["poetry-core"]
