--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "super-auto-comb"
-version = "1.0.0"
+version = "1.1.0"
 description = ""
 authors = ["Marco Pizzocaro <m.pizzocaro@inrim.it>"]
 readme = "README.md"
@@ -8,7 +8,7 @@ packages = [{include = "super_auto_comb", from = "src"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
-numpy = "<2"
+numpy = "^2.2.3"
 scipy = "^1.14.1"
 tqdm = "^4.66.5"
 matplotlib = "^3.9.2"
